--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,6 @@
+//Abstract
+@import 'abstracts/overrides';
+
 @import '../node_modules/bootstrap/scss/bootstrap';
 @import '../node_modules/bootstrap-icons/font/bootstrap-icons';
 
